// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHydratedDomainObjectMetadatasFromFiles should return metadata from files w/ has lots of imports and needs hydration of nested domain objects 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainValueObject",
    "name": "Address",
    "properties": Object {
      "city": DomainObjectPropertyMetadata {
        "name": "city",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectPropertyMetadata {
        "name": "postal",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectPropertyMetadata {
        "name": "state",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectPropertyMetadata {
        "name": "street",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectPropertyMetadata {
        "name": "suite",
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "upc",
      ],
      "updatable": Array [
        "colors",
        "quantity",
        "description",
      ],
    },
    "extends": "DomainEntity",
    "name": "Item",
    "properties": Object {
      "colors": DomainObjectPropertyMetadata {
        "name": "colors",
        "nullable": false,
        "of": Object {
          "nullable": false,
          "required": true,
          "type": "STRING",
        },
        "required": true,
        "type": "ARRAY",
      },
      "description": DomainObjectPropertyMetadata {
        "name": "description",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "price": DomainObjectPropertyMetadata {
        "name": "price",
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "upc": DomainObjectPropertyMetadata {
        "name": "upc",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [],
      "updatable": Array [],
    },
    "extends": "DomainEntity",
    "name": "Order",
    "properties": Object {
      "destination": DomainObjectPropertyMetadata {
        "name": "destination",
        "nullable": false,
        "of": DomainObjectReferenceMetadata {
          "extends": "DomainValueObject",
          "name": "Address",
        },
        "required": true,
        "type": "REFERENCE",
      },
      "id": DomainObjectPropertyMetadata {
        "name": "id",
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "items": DomainObjectPropertyMetadata {
        "name": "items",
        "nullable": false,
        "of": Object {
          "nullable": false,
          "of": DomainObjectReferenceMetadata {
            "extends": "DomainEntity",
            "name": "Item",
          },
          "required": true,
          "type": "REFERENCE",
        },
        "required": true,
        "type": "ARRAY",
      },
      "status": DomainObjectPropertyMetadata {
        "name": "status",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectPropertyMetadata {
        "name": "uuid",
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
    },
  },
]
`;

exports[`getHydratedDomainObjectMetadatasFromFiles should return metadata from files w/ no need for hydration 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainValueObject",
    "name": "Address",
    "properties": Object {
      "city": DomainObjectPropertyMetadata {
        "name": "city",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectPropertyMetadata {
        "name": "postal",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectPropertyMetadata {
        "name": "state",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectPropertyMetadata {
        "name": "street",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectPropertyMetadata {
        "name": "suite",
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
]
`;

exports[`getHydratedDomainObjectMetadatasFromFiles should return metadata from files which needs hydration of nested enum 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "externalId",
      ],
      "updatable": Array [
        "status",
        "amount",
        "currency",
      ],
    },
    "extends": "DomainEntity",
    "name": "Payment",
    "properties": Object {
      "amount": DomainObjectPropertyMetadata {
        "name": "amount",
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "currency": DomainObjectPropertyMetadata {
        "name": "currency",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "externalId": DomainObjectPropertyMetadata {
        "name": "externalId",
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "status": DomainObjectPropertyMetadata {
        "name": "status",
        "nullable": false,
        "of": Array [
          "PENDING",
          "COMPLETED",
          "CANCELED",
        ],
        "required": true,
        "type": "ENUM",
      },
    },
  },
]
`;
